operations-k8s-prod/infrastructure/common/ingress-prom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "public"
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "false"
    alb.ingress.kubernetes.io/security-groups: "NoteJam-Alb-SG-prod"
spec:
  ingressClassName: public
  rules:
    - host: "prod.grafana.aqazi.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
